--- a/solution.html
+++ b/solution.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-	<script src="js/jquery-1.11.3.min.js"></script>
+	<script src="lib/js/jquery-1.11.3.min.js"></script>
 	<script src="js/dave-functions.js"></script>
 
   <h2>Here be Parser</h2>
