begin div test setup and teardown

--- a/solution.html
+++ b/solution.html
@@ -29,5 +29,7 @@
     <!--please remember data attributes are lowercase only, do not camelcase-->
 
   <h2>Here be Unit Tests</h2>
+
+  <div id="testHolder">testHolder</div>
 </body>
 </html>
