Now confirm load of all files via jQuery promise

--- a/solution.html
+++ b/solution.html
@@ -25,7 +25,7 @@
   <h2>Here be Parser</h2>
     <div class="nameParser" id="Parser1" data-filelist="male-first.txt,female-first.txt">replace me!</div>
     <!--please remember data attributes are lowercase only, do not camelcase-->
-    <div class="nameParser" id="Parser2" data-filelist="male-first.txt,female-first.txt">replace me!</div>
+    <!--<div class="nameParser" id="Parser2" data-filelist="male-first.txt,female-first.txt">replace me!</div>-->
     <!--please remember data attributes are lowercase only, do not camelcase-->
 
   <h2>Here be Unit Tests</h2>
