Additional div's with differing files to load

--- a/solution.html
+++ b/solution.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Character-istix</title>
-  <meta name="description" content="Skills Assessment for Collin">
+  <title>Parse It</title>
+  <meta name="description" content="Skills Assessment">
   <meta name="author" content="Dave G">
 
   <link rel="stylesheet" href="css/dave-styles.css">
@@ -24,9 +24,10 @@
 
   <h2>Here be Parser</h2>
     <div class="nameParser" id="Parser1" data-filelist="male-first.txt,female-first.txt"></div>
-    <!--please remember data attributes are lowercase only, do not camelcase-->
-    <!--<div class="nameParser" id="Parser2" data-filelist="male-first.txt,female-first.txt">replace me!</div>-->
-    <!--please remember data attributes are lowercase only, do not camelcase-->
+
+    <div class="nameParser" id="Parser2" data-filelist="female-first.txt"></div>
+
+    <div class="nameParser" id="Parser3" data-filelist="male-first.txt"></div>
 
   <h2>Here be Unit Tests</h2>
 
